@@ -13,6 +13,9 @@ Version 3.11.2  (unrleased)
  - Fix ASC_OR_DESC field in statistics_info
    [Dagfinn Ilmari Mannsåker]
 
+ - Indicate NULL ordering in statitics_info
+   [Dagfinn Ilmari Mannsåker]
+
 
 Version 3.11.1  (released April 28, 2020)
 
